Fixed compilation error when compiling with Java 8 (2.1.1)
Took 5 minutes